@@ -19,26 +19,16 @@
  */
 package org.xwiki.export.pdf.browser;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -55,6 +45,19 @@ import org.xwiki.export.pdf.internal.browser.CookieFilter;
 import org.xwiki.export.pdf.internal.browser.CookieFilter.CookieFilterContext;
 import org.xwiki.test.junit5.mockito.ComponentTest;
 import org.xwiki.test.junit5.mockito.MockComponent;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 /**
  * Unit tests for {@link AbstractBrowserPDFPrinter}.
@@ -93,13 +96,16 @@ class BrowserPDFPrinterTest
     {
         ReflectionUtils.setFieldValue(this.printer, "logger", this.logger);
         ReflectionUtils.setFieldValue(this.printer, "configuration", this.configuration);
-        ReflectionUtils.setFieldValue(this.printer, "cookieFilters", Collections.singletonList(this.cookieFilter));
+        ReflectionUtils.setFieldValue(this.printer, "cookieFilters", List.of(this.cookieFilter));
+
+        when(this.cookieFilter.isFilterRequired()).thenReturn(true);
 
         when(this.printer.getBrowserManager()).thenReturn(this.browserManager);
-        when(this.printer.getRequest()).thenReturn(this.request);
+        when(this.printer.getJakartaRequest()).thenReturn(this.request);
 
         when(this.request.getContextPath()).thenReturn("/xwiki");
         when(this.configuration.getXWikiURI()).thenReturn(new URI("//xwiki-host"));
+        when(this.configuration.isXWikiURISpecified()).thenReturn(true);
         when(this.configuration.getPageReadyTimeout()).thenReturn(30);
     }
 
@@ -123,8 +129,12 @@ class BrowserPDFPrinterTest
         Cookie[] cookies = new Cookie[] {mock(Cookie.class)};
         when(this.request.getCookies()).thenReturn(cookies);
 
+        when(this.request.getRemoteAddr()).thenReturn("192.168.0.118");
+        when(this.request.getHeader("Host")).thenReturn("external:9293");
+        when(this.request.getScheme()).thenReturn("https");
+
         when(this.browserManager.createIncognitoTab()).thenReturn(this.browserTab);
-        when(this.browserTab.navigate(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"))).thenReturn(true);
+        when(this.browserTab.navigate(eq(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json")))).thenReturn(true);
         when(this.browserTab.getSource()).thenReturn("{\"ip\":\"172.12.0.3\"}");
         when(this.browserTab.navigate(browserPrintPreviewURL, cookies, true, 30)).thenReturn(true);
 
@@ -145,10 +155,59 @@ class BrowserPDFPrinterTest
         assertSame(pdfInputStream, this.printer.print(printPreviewURL));
 
         verify(this.cookieFilter).filter(eq(Arrays.asList(cookies)), this.cookieFilterContextCaptor.capture());
-        assertEquals("172.12.0.3", this.cookieFilterContextCaptor.getValue().getBrowserIPAddress());
+        assertEquals("172.12.0.3", this.cookieFilterContextCaptor.getValue().getClientIPAddress());
         assertEquals(browserPrintPreviewURL, this.cookieFilterContextCaptor.getValue().getTargetURL());
 
+        verify(this.browserTab).setExtraHTTPHeaders(
+            Map.of("Forwarded", List.of("by=172.12.0.3;for=192.168.0.118;host=external:9293;proto=https")));
+
+        // Once to get the browser IP address used to set the Forwarded header, and once to the the client IP address
+        // used to filter the authentication cookies.
+        verify(this.browserTab, times(2)).navigate(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"));
+
+        // Only the configured XWiki URI should be used to get the browser IP address.
+        verify(this.browserTab, never()).navigate(new URL("http://external:9293/xwiki/rest/client?media=json"));
         verify(this.browserTab).close();
+    }
+
+    @Test
+    void printWhenXWikiURINotSpecified() throws Exception
+    {
+        when(this.configuration.isXWikiURISpecified()).thenReturn(false);
+        when(this.browserManager.createIncognitoTab()).thenReturn(this.browserTab);
+
+        try {
+            this.printer.print(new URL("http://external:9293/xwiki/bin/export/Some/Page?x=y#z"));
+            fail();
+        } catch (IOException e) {
+            assertEquals("Couldn't find an alternative print preview URL "
+                + "that the web browser used for PDF printing can access.", e.getMessage());
+        }
+
+        verify(this.browserTab).navigate(new URL("http://external:9293/xwiki/rest/client?media=json"));
+        verify(this.browserTab).navigate(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"));
+    }
+
+    @Test
+    void printWithoutCookieFiltering() throws Exception
+    {
+        when(this.cookieFilter.isFilterRequired()).thenReturn(false);
+        Cookie[] cookies = new Cookie[] {mock(Cookie.class)};
+        when(this.request.getCookies()).thenReturn(cookies);
+
+        when(this.browserManager.createIncognitoTab()).thenReturn(this.browserTab);
+        when(this.browserTab.navigate(eq(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"))))
+            .thenReturn(true);
+        when(this.browserTab.getSource()).thenReturn("{\"ip\":\"172.12.0.3\"}");
+        when(this.browserTab.navigate(new URL("http://xwiki-host:9293/xwiki/bin/export/Some/Page?x=y#z"), cookies, true,
+            30)).thenReturn(true);
+
+        this.printer.print(new URL("http://external:9293/xwiki/bin/export/Some/Page?x=y#z"));
+
+        verify(this.browserTab, never()).navigate(new URL("http://external:9293/xwiki/rest/client?media=json"));
+        // Called only once to get the browser IP address used to set the Forwarded header.
+        verify(this.browserTab, times(1)).navigate(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"));
+        verify(this.cookieFilter, never()).filter(any(), any());
     }
 
     @Test
@@ -172,6 +231,27 @@ class BrowserPDFPrinterTest
     }
 
     @Test
+    void printWithReverseProxy() throws Exception
+    {
+        URL printPreviewURL = new URL("http://external:9293/xwiki/bin/export/Some/Page?x=y#z");
+        URL browserPrintPreviewURL = new URL("http://xwiki-host:9293/xwiki/bin/export/Some/Page?x=y#z");
+
+        when(this.request.getHeader("X-Forwarded-For")).thenReturn("192.168.0.117");
+        when(this.request.getHeader("Host")).thenReturn("external:9293");
+        when(this.request.getHeader("X-Forwarded-Proto")).thenReturn("ftp");
+
+        when(this.browserManager.createIncognitoTab()).thenReturn(this.browserTab);
+        when(this.browserTab.navigate(new URL("http://xwiki-host:9293/xwiki/rest/client?media=json"))).thenReturn(true);
+        when(this.browserTab.getSource()).thenReturn("{\"ip\":\"172.12.0.3\"}");
+        when(this.browserTab.navigate(browserPrintPreviewURL, (Cookie[]) null, true, 30)).thenReturn(true);
+
+        this.printer.print(printPreviewURL);
+
+        verify(this.browserTab).setExtraHTTPHeaders(
+            Map.of("Forwarded", List.of("by=172.12.0.3;for=192.168.0.117;host=external:9293;proto=ftp")));
+    }
+
+    @Test
     void isAvailable()
     {
         assertFalse(this.printer.isAvailable());
@@ -190,7 +270,7 @@ class BrowserPDFPrinterTest
     void navigate() throws Exception
     {
         URL url = new URL("http://xwiki.org");
-        when(this.browserTab.navigate(url, null, false, 60)).thenReturn(true);
+        when(this.browserTab.navigate(url, (jakarta.servlet.http.Cookie[]) null, false, 60)).thenReturn(true);
         assertTrue(this.browserTab.navigate(url));
     }
 }
