@@ -19,12 +19,13 @@
  */
 package org.xwiki.export.pdf.internal.browser;
 
-import java.util.Collections;
+import java.util.List;
 
 import javax.inject.Provider;
-import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+
+import jakarta.servlet.http.Cookie;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -42,9 +43,13 @@ import com.xpn.xwiki.web.XWikiRequest;
 import com.xpn.xwiki.web.XWikiResponse;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 /**
@@ -90,9 +95,21 @@ class AuthenticationCookieFilterTest
     }
 
     @Test
+    void isFilterRequired() throws Exception
+    {
+        assertFalse(this.authCookieFilter.isFilterRequired());
+
+        when(this.loginManager.getRememberedUsername(this.httpRequest, this.httpResponse)).thenReturn("alice");
+        assertFalse(this.authCookieFilter.isFilterRequired());
+
+        when(this.loginManager.getRememberedPassword(this.httpRequest, this.httpResponse)).thenReturn("wonderland");
+        assertTrue(this.authCookieFilter.isFilterRequired());
+    }
+
+    @Test
     void filter() throws Exception
     {
-        when(this.cookieFilterContext.getBrowserIPAddress()).thenReturn("172.17.0.3");
+        when(this.cookieFilterContext.getClientIPAddress()).thenReturn("172.17.0.3");
         Cookie cookie = new Cookie("test", "before");
 
         when(this.loginManager.getRememberedUsername(this.httpRequest, this.httpResponse)).thenReturn("alice");
@@ -111,8 +128,33 @@ class AuthenticationCookieFilterTest
         }).when(this.loginManager).rememberLogin(any(HttpServletRequest.class), any(HttpServletResponse.class),
             eq("alice"), eq("wonderland"));
 
-        this.authCookieFilter.filter(Collections.singletonList(cookie), this.cookieFilterContext);
+        this.authCookieFilter.filter(List.of(cookie), this.cookieFilterContext);
 
         assertEquals("value_bound_to_172.17.0.3", cookie.getValue());
+    }
+
+    @Test
+    void filterWithoutAuthenticationCookies() throws Exception
+    {
+        Cookie cookie = new Cookie("test", "before");
+
+        this.authCookieFilter.filter(List.of(cookie), this.cookieFilterContext);
+
+        assertEquals("before", cookie.getValue());
+        verify(this.loginManager, never()).rememberLogin(any(), any(), any(), any());
+
+        when(this.loginManager.getRememberedUsername(this.httpRequest, this.httpResponse)).thenReturn("alice");
+
+        this.authCookieFilter.filter(List.of(cookie), this.cookieFilterContext);
+
+        assertEquals("before", cookie.getValue());
+        verify(this.loginManager, never()).rememberLogin(any(), any(), any(), any());
+
+        when(this.loginManager.getRememberedPassword(this.httpRequest, this.httpResponse)).thenReturn("wonderland");
+
+        this.authCookieFilter.filter(List.of(cookie), this.cookieFilterContext);
+
+        verify(this.loginManager).rememberLogin(any(HttpServletRequest.class), any(HttpServletResponse.class),
+            eq("alice"), eq("wonderland"));
     }
 }
