@@ -19,23 +19,19 @@
  */
 package org.xwiki.refactoring.internal.job;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.xwiki.context.Execution;
-import org.xwiki.context.ExecutionContext;
+import org.junit.jupiter.api.Test;
 import org.xwiki.job.Job;
 import org.xwiki.job.JobGroupPath;
-import org.xwiki.model.ModelContext;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.WikiReference;
 import org.xwiki.refactoring.job.RestoreRequest;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.atMost;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -45,42 +41,29 @@ import static org.mockito.Mockito.when;
  *
  * @version $Id$
  */
-public class RestoreJobTest extends AbstractJobTest
+@ComponentTest
+class RestoreJobTest extends AbstractJobTest
 {
-    @Rule
-    public MockitoComponentMockingRule<Job> mocker = new MockitoComponentMockingRule<>(RestoreJob.class);
-
-    private ModelContext modelContext;
+    @InjectMockComponents
+    private RestoreJob restoreJob;
 
     private WikiReference wikiReference = new WikiReference("mywiki");
 
     private DocumentReference userReference = new DocumentReference("wiki", "Users", "Alice");
 
     @Override
-    protected MockitoComponentMockingRule<Job> getMocker()
+    protected Job getJob()
     {
-        return this.mocker;
-    }
-
-    @Override
-    public void configure() throws Exception
-    {
-        super.configure();
-
-        Execution execution = mocker.getInstance(Execution.class);
-        ExecutionContext executionContext = mock(ExecutionContext.class);
-        when(execution.getContext()).thenReturn(executionContext);
-
-        modelContext = mocker.getInstance(ModelContext.class);
+        return this.restoreJob;
     }
 
     @Test
-    public void restoreSingleDocument() throws Throwable
+    void restoreSingleDocument() throws Throwable
     {
         long deletedDocumentId = 13;
 
         RestoreRequest request = createRequest();
-        request.setDeletedDocumentIds(Arrays.asList(deletedDocumentId));
+        request.setDeletedDocumentIds(List.of(deletedDocumentId));
         request.setCheckRights(true);
         run(request);
 
@@ -91,14 +74,14 @@ public class RestoreJobTest extends AbstractJobTest
     }
 
     @Test
-    public void restoreBatch() throws Throwable
+    void restoreBatch() throws Throwable
     {
         long deletedDocumentId1 = 13;
         long deletedDocumentId2 = 42;
         String batchId = "abc123";
 
         when(modelBridge.getDeletedDocumentIds(batchId))
-            .thenReturn(Arrays.asList(deletedDocumentId1, deletedDocumentId2));
+            .thenReturn(List.of(deletedDocumentId1, deletedDocumentId2));
 
         RestoreRequest request = createRequest();
         request.setBatchId(batchId);
@@ -112,7 +95,7 @@ public class RestoreJobTest extends AbstractJobTest
     }
 
     @Test
-    public void restoreBatchAndDocuments() throws Throwable
+    void restoreBatchAndDocuments() throws Throwable
     {
         // Batch documents.
         long deletedDocumentId1 = 13;
@@ -126,11 +109,11 @@ public class RestoreJobTest extends AbstractJobTest
         long deletedDocumentIdC = 3;
 
         when(modelBridge.getDeletedDocumentIds(batchId))
-            .thenReturn(Arrays.asList(deletedDocumentId1, deletedDocumentId2));
+            .thenReturn(List.of(deletedDocumentId1, deletedDocumentId2));
 
         RestoreRequest request = createRequest();
         request.setBatchId(batchId);
-        request.setDeletedDocumentIds(Arrays.asList(deletedDocumentIdA, deletedDocumentIdB, deletedDocumentIdC));
+        request.setDeletedDocumentIds(List.of(deletedDocumentIdA, deletedDocumentIdB, deletedDocumentIdC));
         run(request);
 
         verifyContext();
@@ -143,23 +126,22 @@ public class RestoreJobTest extends AbstractJobTest
     }
 
     @Test
-    public void jobGroupAtWikiLevel() throws Exception
+    void jobGroupAtWikiLevel() throws Exception
     {
         RestoreRequest request = createRequest();
-        RestoreJob job = (RestoreJob) getMocker().getComponentUnderTest();
-        job.initialize(request);
+        this.restoreJob.initialize(request);
 
         JobGroupPath expectedJobGroupPath = new JobGroupPath(wikiReference.getName(), RestoreJob.ROOT_GROUP);
-        assertEquals(expectedJobGroupPath, job.getGroupPath());
+        assertEquals(expectedJobGroupPath, this.restoreJob.getGroupPath());
     }
 
     @Test
-    public void failToExecuteIfNoWikiSpecified() throws Throwable
+    void failToExecuteIfNoWikiSpecified() throws Throwable
     {
         long deletedDocumentId = 13;
 
         RestoreRequest request = createRequest();
-        request.setDeletedDocumentIds(Arrays.asList(deletedDocumentId));
+        request.setDeletedDocumentIds(List.of(deletedDocumentId));
         request.setWikiReference(null);
 
         try {
@@ -174,6 +156,7 @@ public class RestoreJobTest extends AbstractJobTest
 
         // Verify that the document is not restored.
         verify(this.modelBridge, never()).restoreDeletedDocument(deletedDocumentId, request);
+        assertEquals("Exception thrown during job execution", getLogCapture().getMessage(0));
     }
 
     private RestoreRequest createRequest()
